@startuml task_state_machine
skinparam shadowing false

title Máquina de Estados de Tarefas — Acessília

[*] --> processing : criar_tarefa()

processing --> done : finalizar(resultado)
processing --> error : errar(excecao)
processing --> cancelled : cancelar()

error --> [*]
done --> [*]
cancelled --> [*]

note right of processing
  <b>Campos Relevantes:</b>
  - progresso (0-100%)
  - etapa_atual (Reader, Vision/Data, Editor)
  - erros / falhas
  - resultado (Documento Canônico)
  - inicio / fim
end note

note right of cancelled
  Cancelamento cooperativo via
  verificar_cancelamento()
end note

note bottom of processing
  <b>Roteamento & Estado:</b>
  O Estado gerencia o ciclo de vida dos 4 Agentes.
  No futuro Orquestrador Dinâmico, registrará também
  o histórico de transições de modelos (Ollama <-> OpenRouter).
end note

@enduml
